fixed overflow

--- a/src/index.css
+++ b/src/index.css
@@ -32,13 +32,7 @@ code {
 }
 
 .app {
-  max-width: 992px;
-}
-
-@media screen and (max-width: 768px) {
-  .app {
-    max-width: 414px;
-  }
+  max-width: 100vw;
 }
 
 @font-face {
